fixed the Cancel button vertical alignment

--- a/towtruck/towtruck.less
+++ b/towtruck/towtruck.less
@@ -185,17 +185,22 @@
   background: inherit;
   border: none;
   padding:3px 0px;
-  margin:0px 0px 3px;
+  margin:0px 0px 0px;
   min-width: 0;
   font-size:14px;
   color:#333333;
   font-family: openSansLight, Helvetica;
+  vertical-align:-2px !important;
   &:hover {
     cursor: pointer;
     border-bottom:1px solid #BCBCBC;
-    margin:0px 0px 2px;
+    margin:0px 0px -1px;
   }
 
+}
+
+.towtruck-alt-text {
+  vertical-align:-2px;
 }
 
 
